issues/216 -  Updated CasperTransferHelperTests and CasperServiceTestsNctl to use same test resources as e2e cucumber tests.